--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>client-api - 1.0.0</title>
+        <title>user-api - 1.0.0</title>
         <style>
             body {
                 margin: 0;
@@ -236,7 +236,7 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>org.oda</code></li>
-                                <li>ArtifactId: <code>client-api</code></li>
+                                <li>ArtifactId: <code>user-api</code></li>
                                 <li>Version: <code>1.0.0</code></li>
                                 <li>Quarkus Version: <code>3.6.4</code></li>
                             </ul>
